Added sign in with google button and working backend for easy sign in and login activity helping in eliminating activity_second_loading_page.xml

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -129,6 +129,7 @@
     <string name="update">Update</string>
     <string name="current_language">"Current Language: "</string>
     <string name="keep_trying_to_get_verification_email_untill_you_recive_a_email">Keep trying to get verification email untill you recive a email.</string>
+    <string name="default_web_client_id_new">685729801545-kb50l42plcclo9k94aoi14d2h990kqta.apps.googleusercontent.com</string>
 
     <string-array name="languages">
         <item>English</item>
