--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -132,7 +132,8 @@
     <string name="current_language">"Current Language: "</string>
     <string name="keep_trying_to_get_verification_email_untill_you_recive_a_email">Keep trying to get verification email untill you recive a email.</string>
     <string name="default_web_client_id_new">685729801545-kb50l42plcclo9k94aoi14d2h990kqta.apps.googleusercontent.com</string>
-
+    <string name="something_went_wrong">Something went wrong. Please try again.</string>
+    <string name="notes">Notes</string>
     <string-array name="languages">
         <item>English</item>
         <item>Hindi</item>
