--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -130,7 +130,8 @@
     <string name="current_language">"वर्तमान भाषा: "</string>
     <string name="keep_trying_to_get_verification_email_untill_you_recive_a_email">जब तक आपको कोई ईमेल प्राप्त न हो जाए तब तक सत्यापन ईमेल प्राप्त करने का प्रयास करते रहें।</string>
     <string name="default_web_client_id_new">685729801545-kb50l42plcclo9k94aoi14d2h990kqta.apps.googleusercontent.com</string>
-
+    <string name="something_went_wrong">कुछ गड़बड़ हुई है। कृपया दोबारा प्रयास करें।</string>
+    <string name="notes">नोट्स</string>
     <string-array name="languages">
         <item>English</item>
         <item>Hindi</item>
